cabal-version:       >=1.10
name:                ic-stub
version:             0.1.0.0
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
build-type:          Simple

flag release
  default: False
  description: Release build, warnings are errors

executable ic-stub-run
  main-is:             ic-stub-run.hs
  hs-source-dirs:      src
  other-modules:       IC.Stub
  other-modules:       IC.Types
  other-modules:       IC.Canister.Imp
  other-modules:       IC.Canister.Pure
  other-modules:       IC.Wasm.Winter
  other-modules:       IC.DRun.Parse
  build-depends:       base >=4.11 && <5
  build-depends:       optparse-applicative
  build-depends:       filepath
  build-depends:       hex-text
  build-depends:       text
  build-depends:       bytestring
  build-depends:       containers
  build-depends:       winter
  build-depends:       mtl
  build-depends:       transformers
  build-depends:       binary
  build-depends:       data-default-class
  build-depends:       vector
  build-depends:       primitive
  build-depends:       utf8-string
  build-depends:       hex-text
  default-language:    Haskell2010
  ghc-options:         -rtsopts
  ghc-options:         -Wall -Wno-name-shadowing
  if flag(release)
    ghc-options:       -Werror
