[package]
name = "test-runner"
version = "0.1.0"
edition = "2024"


[dependencies]
pocket-ic = "11.0.0"
ic-management-canister-types = "0.3.3"
candid = "0.10.17"
serde = "1.0.219"
hex = "0.4.3"
wasmparser = "0.228.0"

# Workaround for Apple linker bug on x86_64-apple-darwin that causes
# hyper HTTP client to generate bad code with opt-level=2
# See: https://github.com/rust-lang/rust/issues/140686
# Applied to all platforms since test-runner performance is not critical
[profile.release]
opt-level = 0
