[package]
name = "wasm-profiler"
version = "0.1.0"
edition = "2018"

[dependencies]
parity-wasm = { git = "https://github.com/nomeata/parity-wasm", branch = "joachim/name_section_parsing" }
structopt = "0.3"
clap = "2.33"

[[bin]]
name = "wasm-profiler-instrument"
path = "src/wasm_profiler_instrument.rs"
