[package]
name = "motoko-rts"
version = "0.1.0"
authors = ["dfinity <sdk@dfinity.org>"]
edition = "2018"

# For rlib use native/Cargo.toml
[lib]
crate-type = ["staticlib"]

[features]
# This file is used to build the RTS to be linked with moc-generated code, so
# we enable the "ic" feature. `native/Cargo.toml` doesn't have this feature and
# is used in RTS tests.
default = ["ic"]

# This feature is used to enable stuff needed for the RTS linked with
# moc-generated code, but not when testing the RTS
ic = []

[dependencies]
libc = { version = "0.2.112", default_features = false }
motoko-rts-macros = { path = "../motoko-rts-macros" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1 # makes debugging easier
opt-level = "s" # optimize for size
