(executable
 (name moc)
 (modules moc)
 (libraries profiler pipeline source_id)
)
(executable
 (name mo_ide)
 (modules mo_ide)
 (libraries languageServer)
)
(executable
 (name mo_ld)
 (modules mo_ld)
 (libraries wasm_exts linking)
)
(executable
 (name mo_doc)
 (modules mo_doc)
 (libraries docs)
)
(executable
 (name didc)
 (modules didc)
 (libraries idllib source_id)
)
(executable
 (name deser)
 (modules deser)
 (libraries stdio num source_id)
)
(executable
 (name candid_tests)
 (modules candid_tests)
 (libraries lib idllib mo_idl mo_values lang_utils)
)
