(executable
 (name moc)
 (modules moc)
 (libraries profiler pipeline source_id)
 (ocamlopt_flags -ccopt -static)
 (instrumentation (backend bisect_ppx --bisect-silent yes))
)
(executable
 (name mo_ide)
 (modules mo_ide)
 (libraries languageServer)
 (ocamlopt_flags -ccopt -static)
 (instrumentation (backend bisect_ppx --bisect-silent yes))
)
(executable
 (name mo_ld)
 (modules mo_ld)
 (libraries wasm_exts linking)
 (ocamlopt_flags -ccopt -static)
 (instrumentation (backend bisect_ppx --bisect-silent yes))
)
(executable
 (name mo_doc)
 (modules mo_doc)
 (libraries docs)
 (ocamlopt_flags -ccopt -static)
 (instrumentation (backend bisect_ppx --bisect-silent yes))
)
(executable
 (name didc)
 (modules didc)
 (libraries lib idllib source_id)
 (ocamlopt_flags -ccopt -static)
 (instrumentation (backend bisect_ppx --bisect-silent yes))
)
(executable
 (name deser)
 (modules deser)
 (libraries stdio num source_id)
 (ocamlopt_flags -ccopt -static)
 (instrumentation (backend bisect_ppx --bisect-silent yes))
)
(executable
 (name candid_tests)
 (modules candid_tests)
 (libraries lib idllib mo_idl mo_values lang_utils)
 (ocamlopt_flags -ccopt -static)
 (instrumentation (backend bisect_ppx --bisect-silent yes))
)
