(executable
 (name moc)
 (modules moc)
 (libraries profiler pipeline source_id)
 (instrumentation (backend bisect_ppx --bisect-silent yes))
)
(executable
 (name mo_ld)
 (modules mo_ld)
 (libraries wasm_exts linking)
 (instrumentation (backend bisect_ppx --bisect-silent yes))
)
(executable
 (name mo_doc)
 (modules mo_doc)
 (libraries docs)
 (instrumentation (backend bisect_ppx --bisect-silent yes))
)
(executable
 (name didc)
 (modules didc)
 (libraries lib idllib source_id)
 (instrumentation (backend bisect_ppx --bisect-silent yes))
)
(executable
 (name deser)
 (modules deser)
 (libraries stdio num source_id)
 (instrumentation (backend bisect_ppx --bisect-silent yes))
)
(executable
 (name candid_tests)
 (modules candid_tests)
 (libraries lib idllib mo_idl mo_values lang_utils)
 (instrumentation (backend bisect_ppx --bisect-silent yes))
)
