(library
 (name common)
 (modules common)
 (libraries checkseum.ocaml mo_config pipeline idllib)
 (preprocess (pps js_of_ocaml-ppx))
)

(executable
 (name moc_js)
 (modules moc_js)
 (libraries common mo_config idllib)
 (js_of_ocaml (flags --no-extern-fs --no-source-map))
 (preprocess (pps js_of_ocaml-ppx))
)

(executable
 (name moc_interpreter)
 (modules moc_interpreter)
 (libraries common mo_config)
 (js_of_ocaml (flags --no-extern-fs --no-source-map))
 (preprocess (pps js_of_ocaml-ppx))
)

(executable
 (name didc_js)
 (modules didc_js)
 (libraries idllib lang_utils)
 (preprocess (pps js_of_ocaml-ppx))
)

