(library
 (name common)
 (modules common)
 (libraries checkseum.ocaml mo_config pipeline idllib)
 (preprocess (pps js_of_ocaml-ppx))
)

(executable
 (name moc_js)
 (modes js)
 (modules moc_js)
 (libraries common mo_config idllib)
 (preprocess (pps js_of_ocaml-ppx))
)

(executable
 (name moc_interpreter)
 (modes js)
 (modules moc_interpreter)
 (libraries common mo_config)
 (preprocess (pps js_of_ocaml-ppx))
)

(executable
 (name didc_js)
 (modes js)
 (modules didc_js)
 (libraries lib idllib lang_utils)
 (preprocess (pps js_of_ocaml-ppx))
)

