(library
  (name mo_frontend)
  (libraries lib lang_utils mo_config mo_def mo_types mo_values menhirLib))

(ocamllex lexer)

(menhir
  (modules parser)
  (flags --strict --inspection --unused-tokens --table --cmly -v)
  (infer false))

(rule
 (targets parser_recover.ml)
 (deps parser.cmly)
 (action
  (with-stdout-to
   %{targets}
   (run ../menhir-recover/main.exe parser.cmly))))
