(library
  (name pipeline)
  (libraries
    lib
    idllib
    lang_utils
    mo_def
    mo_config
    mo_types
    mo_values
    mo_frontend
    mo_idl
    mo_interpreter
    lowering
    wasm_exts
    ir_def
    ir_interpreter
    ir_passes
    codegen
    rts
    viper
  )
  (modules (:standard \ test_field_srcs))
  (inline_tests)
  (preprocess (per_module ((pps ppx_inline_test) resolve_import_test test_field_srcs)))
  (instrumentation (backend bisect_ppx --bisect-silent yes))
)

(rule
  (alias copy_test_files)
  (targets run run-drun perf bench)
  (action
    (progn
      (run cp -r ../../../../test/run/      run)
      (run cp -r ../../../../test/run-drun/ run-drun)
      (run cp -r ../../../../test/perf/     perf)
      (run cp -r ../../../../test/bench/    bench))))

(library
  (name test_field_srcs)
  (inline_tests
    (deps
      (alias copy_test_files)))
  (modules test_field_srcs)
  (libraries pipeline mo_frontend lib lang_utils mo_config mo_def mo_types mo_values wasm_exts)
  (flags (:standard -w -40))
  (preprocess (pps ppx_inline_test ppx_expect)))
