cabal-version:       2.4

name:                lsp-int
version:             0
synopsis:            Integration tests for the language server
-- description:
author:              Christoph Hegemann
maintainer:          christoph@dfinity.org
-- copyright:
category:            Testing
extra-source-files:  CHANGELOG.md

executable lsp-int
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    OverloadedStrings, DuplicateRecordFields
  build-depends:       base ^>=4.12.0.0
                     , text ^>=1.2.3.1
                     , hspec
                     , data-default
                     , lsp-test ^>=0.7.0.0
  -- hs-source-dirs:
  default-language:    Haskell2010
