cabal-version:       2.4

name:                lsp-int
version:             0
synopsis:            Integration tests for the language server
-- description:
author:              dfinity
maintainer:          sdk@dfinity.org
-- copyright:
category:            Testing
extra-source-files:  CHANGELOG.md

executable lsp-int
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    OverloadedStrings, DuplicateRecordFields
  build-depends:       base ^>=4.15
                     , text ^>=1.2
                     , hspec
                     , HUnit
                     , filepath
                     , directory
                     , lens
                     , data-default
                     , lsp-types
                     , lsp-test
  -- hs-source-dirs:
  default-language:    Haskell2010
