cabal-version:       2.4

name:                qc-actorscript
version:             0
synopsis:            generate randomised tests for ActorScript
-- description:
author:              Gabor Greif
maintainer:          gabor@dfinity.org
-- copyright:
category:            Testing
extra-source-files:  CHANGELOG.md

executable qc-actorscript
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    ConstraintKinds, StandaloneDeriving, DataKinds, KindSignatures, GADTs, MultiParamTypeClasses
  build-depends:       base ^>=4.12.0.0
                     , text ^>=1.2.3.1
                     , process
                     , QuickCheck
                     , quickcheck-text
                     , quickcheck-unicode
                     , tasty
                     , tasty-quickcheck
                     , turtle
  -- hs-source-dirs:
  default-language:    Haskell2010
