cabal-version:       2.4

name:                qc-motoko
version:             1
synopsis:            generate randomised tests for Motoko
-- description:
author:              dfinity
maintainer:          sdk@dfinity.org
-- copyright:
category:            Testing
extra-source-files:  CHANGELOG.md

executable qc-motoko
  main-is:             Main.hs
  other-modules:       Embedder, Turtle.Pipe
  other-extensions:    ConstraintKinds, StandaloneDeriving, DataKinds, KindSignatures, GADTs, MultiParamTypeClasses
  ghc-options:         -O -threaded -with-rtsopts=-N2
  build-depends:       base ^>=4.15
                     , text ^>=1.2.3.1
                     , process
                     , exceptions
                     , managed
                     , QuickCheck
                     , quickcheck-text
                     , quickcheck-unicode
                     , tasty
                     , tasty-quickcheck
                     , turtle
  -- hs-source-dirs:
  default-language:    Haskell2010
